fixed footerbar shifting, fixed pooldisplay bug

--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ img {
 }
 
 .pool-row {
-    max-height: 4vh;
+    max-height: 3.5vh;
     padding: 0;
     background-color: transparent;
 }
@@ -324,14 +324,19 @@ img {
   align-items: center;
 }
 
+.footer-item {
+  min-width: 6vw;
+  max-width: 6vw;
+}
+
 .footer-image{
-  width: 2.7vw;
-  height: 2.7vw;
+  width: 2.5vw;
+  height: 2.5vw;
   height: auto;
 }
 
 p {
-  font-size: 1.5vw;
+  font-size: 1vw;
   vertical-align: middle;
    margin-block-end: 0 !important;
 }
